--- a/src/app/Components/user-card/user-card.component.html
+++ b/src/app/Components/user-card/user-card.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-4">
   <!--Card-->
   <div class="card overflow-hidden text-center bg-light">
-    <img src="../../../assets/dummy.png" class="card-img-top img-fluid" alt="">
+    <img src="../../../assets/background.png" class="card-img-top img-fluid" alt="">
 
     <!--Card body-->
     <div class="card-body p-0">
