--- a/src/app/Components/user-card/user-card.component.html
+++ b/src/app/Components/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4">
+<div class="card mb-4 my-4">
   <!--Card-->
   <div class="card overflow-hidden text-center bg-light">
     <img src="../../../assets/background.png" class="card-img-top img-fluid" alt="">
